--- a/fp-fuid-cisco-pxgrid-tr/fuid-ise.yml
+++ b/fp-fuid-cisco-pxgrid-tr/fuid-ise.yml
@@ -18,4 +18,5 @@ AD_DOMAIN_NAME: <YOUR ACTIVE DIRECTORY DOMAIN NAME>
 SESSION_LISTENER_INTERVAL_TIME: 3
 SAVE_LOGS: false
 DISPLAY_INFO: true
+IGNORE_UNKNOWN_SESSIONS: true
 
