--- a/fp-fuid-cisco-pxgrid-docker/.env
+++ b/fp-fuid-cisco-pxgrid-docker/.env
@@ -15,3 +15,4 @@ AD_DOMAIN_NAME=<YOUR ACTIVE DIRECTORY DOMAIN NAME>
 SESSION_LISTENER_INTERVAL_TIME=3
 SAVE_LOGS=false
 DISPLAY_INFO=true
+IGNORE_UNKNOWN_SESSIONS=true
